--- a/setup.html
+++ b/setup.html
@@ -199,7 +199,7 @@ First, create a directory where the code will go, we’ll call this the <em>work
 <p>You are free to use any code editor and/or compiler; this tutorial will use Visual Studio Code.
 For the Linux OpenXR project, we’ll use CMake alongside Visual Studio Code to build the project.
 First, Create a directory where the code will go, we’ll call this the <em>workspace</em> directory. Open Visual Studio Code and from the File menu, select “Open Folder…”</p>
-<figure class="align-center">
+<figure class="align-default">
 <a class="reference internal image-reference" href="_images/linux-vscode-open-folder.png"><img alt="The File menu of Visual Studio Code is shown, with the command &quot;Open Folder...&quot; selected." src="_images/linux-vscode-open-folder.png" style="width: 391.05px; height: 234.3px;" /></a>
 </figure>
 <p>The File menu of Visual Studio Code, with the command “Open Folder…” selected</p>
@@ -232,7 +232,9 @@ Now, we’ll create our source file. Create a new text file called <code class="
 <p class="rubric">Android</p>
 <p>Here, We’ll show how to hand build an Android Studio project that runs a C++ Native Activity.
 Open Android Studio, select New Project and choose an Empty Activity. Set the names and save location. The language can be ignored here as we are using C++, and we can set the Minimum SDK to API 24: Android 7.0(Nougat). Complete set up.</p>
-<img alt="Android Studio - New Project - Empty Activity." class="align-right" src="_images/android-studio-newproject.png" />
+<figure class="align-right">
+<img alt="Android Studio - New Project - Empty Activity." src="_images/android-studio-newproject.png" />
+</figure>
 <p class="rubric">CMake</p>
 <p>With the Android Studio project now set up, we need to modify some of the files and folders so as to set up the project to support the C++ Native Activity.
 Under the <code class="docutils literal notranslate"><span class="pre">app</span></code> folder, you can delete the <code class="docutils literal notranslate"><span class="pre">libs</span></code> folder, and under the <code class="docutils literal notranslate"><span class="pre">app/src</span></code> you can also delete the <code class="docutils literal notranslate"><span class="pre">androidTest</span></code> and <code class="docutils literal notranslate"><span class="pre">test</span></code> folders. Finally under <code class="docutils literal notranslate"><span class="pre">app/src/main</span></code>, delete the <code class="docutils literal notranslate"><span class="pre">java</span></code> folder and add a <code class="docutils literal notranslate"><span class="pre">cpp</span></code> folder. Under the <code class="docutils literal notranslate"><span class="pre">app/src/main/res</span></code>, delete the <code class="docutils literal notranslate"><span class="pre">values-night</span></code> and <code class="docutils literal notranslate"><span class="pre">xml</span></code> folders. Under the <code class="docutils literal notranslate"><span class="pre">values</span></code> modify <code class="docutils literal notranslate"><span class="pre">colors.xml</span></code> and <code class="docutils literal notranslate"><span class="pre">styles.xml</span></code> as shown.</p>
@@ -549,7 +551,9 @@ chosen platform. We first create a ‘pseudo-main function’ called <code class
 <p>Now launch CMake GUI, and point the “Where is the source code” box to the root of your solution <em>workspace</em> directory,
 where your original <code class="docutils literal notranslate"><span class="pre">CMakeLists.txt</span></code> is located. Point the “Where to build the binaries” box to a subdirectory called <code class="docutils literal notranslate"><span class="pre">build</span></code>,
 click Configure, “Yes” to create the build folder, and “OK” to accept the default Generator.</p>
-<img alt="Select" class="align-right" src="_images/cmake-tutorial2-1.png" />
+<figure class="align-right">
+<img alt="Select" src="_images/cmake-tutorial2-1.png" />
+</figure>
 <p>Now, we must tell the tutorial project where to find the OpenXR-SDK, which we built in Section 1.
 Click on the variable <code class="docutils literal notranslate"><span class="pre">OPENXR_DIR</span></code> and type in or browse to the location of the OpenXR-SDK repository you downloaded
 previously, the click “Generate”. When the projects have been generated, open your new project, by clicking
@@ -557,15 +561,23 @@ previously, the click “Generate”. When the projects have been generated, ope
 </div>
 <div class="linux docutils container" id="id6">
 <p class="rubric">Linux</p>
-<p>You now have three files, laid out as follow:</p>
-<img alt="Select" class="align-right" src="_images/linux-vscode-initial-files.png" />
+<p>You now have three files, laid out as follows:</p>
+<figure class="align-default">
+<img alt="Initial files in VS Code" src="_images/linux-vscode-initial-files.png" />
+</figure>
 <p>Having installed the CMake extension for Visual Studio Code, you can now right-click on the main <code class="docutils literal notranslate"><span class="pre">CMakeLists.txt</span></code> file (the one in the root <em>workspace</em> folder) and select “Configure All Projects”:</p>
-<img alt="Select" class="align-right" src="_images/linux-vscode-cmake-configure.png" />
+<figure class="align-default">
+<img alt="Select" src="_images/linux-vscode-cmake-configure.png" />
+</figure>
 <p>Now the CMake panel will be available by clicking its icon on the leftmost panel. Hover your mouse over the “Project Outline”
 and click the three dots at the right. An option to “Edit CMake Cache” will appear, click this and you’ll see the Cache Editor
 page.</p>
-<img alt="Select" class="align-right" src="_images/linux-vscode-cmake-more-actions.png" />
-<img alt="Select" class="align-right" src="_images/linux-vscode-cmake-cache.png" />
+<figure class="align-default">
+<img alt="Select" src="_images/linux-vscode-cmake-more-actions.png" />
+</figure>
+<figure class="align-default">
+<img alt="Select" src="_images/linux-vscode-cmake-cache.png" />
+</figure>
 <p>NOTE: It’s possible to use CMake GUI in Linux, but using Visual Studio Code’s integrated tools works better with Visual Studio Code.</p>
 <p>In the CMake Cache editor, find <code class="docutils literal notranslate"><span class="pre">OPENXR_DIR</span></code> and enter the directory where you downloaded OpenXR-SDK in Chapter 1.
 We can now select “Configure and Build All” from the right-click menu of the main <code class="docutils literal notranslate"><span class="pre">CMakeLists.txt</span></code> file.</p>
@@ -598,7 +610,9 @@ Click the “Gear” icon to edit the file launch.json, and enter the following:
 <p>With all the source and build systems set up, we can now build the Android project. In upper right of Android Studio, you should find the toolbar below. Click the green hammer icon to build the project, if all is successful you should see “BUILD SUCCESSFUL in […]s” in the Build Output window.</p>
 <p>Next to the green hammer icon is the Run/Debug configuration dropdown menu. If that isn’t populated, create a configuration called app.</p>
 <p>Turn on and connect your Android device. Set up any requirments for USB debugging and adb. You device should appear in the dropdown. Here, I am using a Oculus Quest 2.</p>
-<img alt="Build/Run Toolbar" class="align-center" src="_images/android-studio-build-run-toolbar.png" />
+<figure class="align-default">
+<img alt="Build/Run Toolbar" src="_images/android-studio-build-run-toolbar.png" />
+</figure>
 <p>To debug/run the application click the green bug icon.</p>
 </div>
 <p>Now that we have a basic application up and running with the OpenXR header files and libraries, we can start to set up the core aspects of OpenXR. As a modern Khronos API, the OpenXR is heavily influcencd by the Vulkan API. So those who are familiar with the style of the Vulkan API will find OpenXR easy to follow.</p>
