Improve api selection.

--- a/search.html
+++ b/search.html
@@ -31,7 +31,7 @@
 	var platform = Cookies.get("platform")
 	console.log("platform = " + platform);
 	if (typeof platform == 'undefined')
-		platform="linux";
+	platform="linux";
 	if (platform == "windows") {
 	$(".linux").hide();
 	$(".android").hide();
@@ -57,6 +57,8 @@
 	}
 	var element = document.getElementById('select' + platform);
 	element.classList.add('selected-platform');
+	var element2 = document.getElementById('select' + platform +"-inline");
+	element2.classList.add('selected-platform');
 	window.updatePlatform=updatePlatform;
 	}</script>
 	<script >
@@ -111,13 +113,12 @@
       </div>
     </nav>
 
-    <div data-toggle="wy-nav-shift" class="wy-nav-content-wrap"><nav class="wy-nav-top" aria-label="Mobile navigation menu" >
-          <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-          <a href="index.html">OpenXR Tutorial</a>
-      </nav>
+	<div data-toggle="wy-nav-shift" class="wy-nav-content-wrap"><nav class="wy-nav-top" aria-label="Mobile navigation menu" >
+			<i data-toggle="wy-nav-top" class="fa fa-bars"></i>
+			<a href="index.html">OpenXR Tutorial</a>
+		</nav>
 
-	  <div class="wy-nav-content">
-		  <div class="sticky-breadcrumb-ribbon" role="navigation" aria-label="Page navigation">
+		<div class="sticky-breadcrumb-ribbon" role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
       <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active">Search</li>
@@ -144,10 +145,11 @@
 	  </li>
   </ul>
 </div>
-			  <div class="rst-content">
-				  <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
-					  <div itemprop="articleBody">
-						  
+		<div class="wy-nav-content">
+				<div class="rst-content">
+					<div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
+						<div itemprop="articleBody">
+							
   <noscript>
   <div id="fallback" class="admonition warning">
     <p class="last">
@@ -161,9 +163,9 @@
   
   </div>
 
-					  </div>
-				  </div>
-				  <footer>
+						</div>
+					</div>
+					<footer>
 
   <hr>
 
@@ -172,10 +174,10 @@
   </div> 
 
 </footer>
-			  </div>
-		  </div>
-	  </div>
-  </div>
+				</div>
+			</div>
+		</div>
+	</div>
   <script>
       jQuery(function () {
           SphinxRtdTheme.Navigation.enable(true);
